# buddhabrot

./: README.md  meson.build
src/: buddhabrot.c  buddhabrot.h  image.c  image.h  main.c  mandelbrot.c  mandelbrot.h  options.c  options.h  ppm.c  ppm.h
